--- a/portfolio-app/src/index.scss
+++ b/portfolio-app/src/index.scss
@@ -11,10 +11,14 @@ body {
     margin: 0;
     color: varb.$primary-text-color;
     background-color: varb.$primary-color;
-    overflow: hidden;
     display: block;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 // Scrollbar
